@@ -914,7 +914,7 @@ analyze = function(
       step = step,
       main = plotname,
       normalize = FALSE,
-      scale = scale,
+      scale = scale / m,
       output = 'original',
       ylim = ylim,
       xlab = xlab,
